--- a/index.html
+++ b/index.html
@@ -18,32 +18,40 @@
             background: linear-gradient(229.99deg, #483927 -26%, #743018 145%);
           "
         >
-          <h1>Сalifornia breakfast</h1>
-          <p>Toast, eggs, avocado</p>
+          <div class="name">
+            <h1>Сalifornia breakfast</h1>
+            <p>Toast, eggs, avocado</p>
+          </div>
         </div>
         <div
           style="
             background: linear-gradient(221.87deg, #E2BBDE 1%, #342740 128%);
           "
         >
-          <h1>Berry punch</h1>
-          <p>Love, death & robots</p>
+          <div class="name">
+            <h1>Berry punch</h1>
+            <p>Love, death & robots</p>
+          </div>
         </div>
         <div
           style="
             background: linear-gradient(220.16deg, #ffe101 -8%, #f39102 138%);
           "
         >
-          <h1>Citrus explosion</h1>
-          <p>Cream, orange & blackberry</p>
+          <div class="name">
+            <h1>Citrus explosion</h1>
+            <p>Cream, orange & blackberry</p>
+          </div>
         </div>
         <div
         style="
           background: linear-gradient(215.32deg, #f90306 -1%, #9e0706 124%);
         "
       >
+        <div class="name">
           <h1>Strawberry luxury</h1>
           <p>Basket crema with strawberry</p>
+        </div>
       </div>
       </div>
       <div class="main-slide">
